demo/deploy_sample/demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
spec:
  containers:
  - name: demo-pod
    image: quay.io/uvelyster/demo
    ports:
    - containerPort: 5000
  nodeSelector:
    app: test
