demo/deploy_sample/demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demosvc
spec:
  selector:
    app: demo
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
