demo/deploy_sample/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.mysvc.dom
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mynginx
            port:
              number: 80
  - host: apache.mysvc.dom
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myhttpd
            port:
              number: 80
